# contact-harvest

./: .gitignore  CLAUDE.md  README.md  generate_queries.py  main.py  pyproject.toml
copdog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
queries/: queries.txt
scraper/: body.txt  getURLs.py  scrapeSources.py
scraper/otp/: result.json  summarize.json
scraper/util/: statusMessage.py  summarize.py
