[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "copdog"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "rich",
    "playwright",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "log_util*"]